--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <queries>
+        <package android:name="com.example.cognizantrever" />
+    </queries>
+
+    <uses-permission android:name="mypermission.password.portugal" />
 
     <application
         android:allowBackup="true"
@@ -11,11 +17,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SecondApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".DataAdapter"
+            android:exported="false" />
+
         <receiver
             android:name=".FlightReceiver"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="ihave.flight" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -24,7 +34,7 @@
 
         <activity
             android:name=".AnyActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="cognizant.portugal.android" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -32,7 +42,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
